[tool.poetry]
name = "monty-data-visualization"
version = "0.1.0"
description = ""
authors = ["tszchunchow <75660835+tszchunchow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "monty_data_visualization"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
click = "^8.1.7"
geopandas = "^0.14.1"
pyarrow = "^14.0.1"
fastparquet = "^2023.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tabulate_metrics = "src.tabulate_metrics:main"
